<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_galeri"
        android:icon="@drawable/galeri"
        android:title="@string/title_galeri" />

    <item
        android:id="@+id/navigation_prestasi"
        android:icon="@drawable/prestasi"
        android:title="@string/title_prestasi" />

    <item
        android:id="@+id/navigation_sekolah"
        android:icon="@drawable/sekolah"
        android:title="@string/title_sekolah" />

    <item
        android:id="@+id/navigation_founder"
        android:icon="@drawable/founder"
        android:title="@string/title_founder" />

    <item
        android:id="@+id/navigation_ekskul"
        android:icon="@drawable/ekskul"
        android:title="@string/title_ekskul" />

</menu>